# wavsen-fade

./: CMakeLists.txt
src/audio/: audio.cppm  audio_capture.cpp  audio_capture.cppm  audio_capture_dsp.hpp  audio_capture_pipewire.cpp  audio_capture_pulse.cpp  audio_device.cpp  audio_device.cppm  audio_device_pipewire.cpp  audio_device_pulse.cpp  av_player.cpp  av_player.cppm  byte_stream.cpp  byte_stream.cppm  cubeb_device.cpp  cubeb_device.cppm  sound_manager.cpp  sound_manager.cppm  stream_decoder.cpp  stream_decoder.cppm
src/ffi/cubeb/: CMakeLists.txt  cubeb.cppm
src/ffi/ffmpeg/: CMakeLists.txt  avcodec.cppm  avutil.cppm  swscale.cppm
src/ffi/vulkan/: vulkan.cppm
src/video/: presenter.cppm  video_decoder.cpp  video_decoder.cppm  vk_device.cpp  vk_device.cppm  wavsen_video.cppm  yuv_to_rgba.cpp  yuv_to_rgba.cppm
tests/: audio_capture_dsp_tests.cpp
